<resources>
    <string name="app_name">Animals</string>

    <!--actions-->
    <string name="action_settings">Settings</string>
    <string name="action_start_game">Start Game</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>

    <!--prompts-->
    <string name="prompt_start_game">Think of an animal, and I\'ll guess what it is. Ready?</string>
    <string name="prompt_new_animal">I give up! What animal were you thinking of?</string>
    <string name="prompt_new_question">What question can you think of that would distinguish %1$s %2$s from %3$s %4$s?</string>
    <string name="prompt_question_yes_no">If you were thinking of %1$s %2$s, and I asked you \"%3$s\" would the answer be yes or no?</string>
    <string name="prompt_play_again_new_animal">Great! I know a new animal!\nWould you like to play again?</string>
    <string name="prompt_play_again_guessed_it">Yay! I guessed it! Would you like to play again?</string>

    <string name="guess_animal">Is the animal you\'re thinking of %1$s %2$s?</string>
</resources>
